--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
                             <i class="fas fa-tshirt text-2xl text-wedding-gold"></i>
                         </div>
                     </div>
-                    <h3 class="font-cormorant text-xl font-semibold mb-2">Código de Vestimenta</h3>
+                    <h3 class="font-cormorant text-2xl font-semibold mb-4">Código de Vestimenta</h3>
                     <p>Formal</p>
-                    <p class="text-sm mt-2 text-red-600">Por favor, mujeres evitar el uso de blanco o tonalidades similares, rojo o verde.</p>
+                    <p class="text-sm mt-2 text-red-600">Por favor, mujeres evitar el uso de dorado, blanco o tonalidades similares, rojo y verde.</p>
                 </div>
             </div>
             
@@ -186,7 +186,7 @@
                                 <i class="fas fa-church text-2xl text-wedding-gold"></i>
                             </div>
                             <div class="text-right">
-                                <h3 class="font-cormorant text-xl font-semibold">12:00 pm</h3>
+                                <h3 class="font-cormorant text-2xl font-semibold">12:00 pm</h3>
                                 <p>Ceremonia en templo</p>
                             </div>
                         </div>
@@ -201,7 +201,7 @@
                                 <i class="fas fa-glass-cheers text-2xl text-wedding-gold"></i>
                             </div>
                             <div>
-                                <h3 class="font-cormorant text-xl font-semibold">6:00 pm</h3>
+                                <h3 class="font-cormorant text-2xl font-semibold">6:00 pm</h3>
                                 <p>Recepción en salón</p>
                             </div>
                         </div>
@@ -216,7 +216,7 @@
                                 <i class="fas fa-utensils text-2xl text-wedding-gold"></i>
                             </div>
                             <div class="text-right">
-                                <h3 class="font-cormorant text-xl font-semibold">7:00 pm</h3>
+                                <h3 class="font-cormorant text-2xl font-semibold">7:00 pm</h3>
                                 <p>Cena de boda</p>
                             </div>
                         </div>
@@ -231,7 +231,7 @@
                                 <i class="fas fa-music text-2xl text-wedding-gold"></i>
                             </div>
                             <div>
-                                <h3 class="font-cormorant text-xl font-semibold">9:30 pm</h3>
+                                <h3 class="font-cormorant text-2xl font-semibold">9:30 pm</h3>
                                 <p>Baile de novios</p>
                             </div>
                         </div>
@@ -246,7 +246,7 @@
                                 <i class="fas fa-wine-glass-alt text-2xl text-wedding-gold"></i>
                             </div>
                             <div class="text-right">
-                                <h3 class="font-cormorant text-xl font-semibold">10:00 pm</h3>
+                                <h3 class="font-cormorant text-2xl font-semibold">10:00 pm</h3>
                                 <p>Brindis</p>
                             </div>
                         </div>
@@ -261,7 +261,7 @@
                                 <i class="fas fa-music text-2xl text-wedding-gold"></i>
                             </div>
                             <div class="text-left">
-                                <h3 class="font-cormorant text-xl font-semibold">10:15 pm</h3>
+                                <h3 class="font-cormorant text-2xl font-semibold">10:15 pm</h3>
                                 <p>Fiesta</p>
                             </div>
                         </div>
@@ -276,7 +276,7 @@
                                 <i class="fas fa-car text-2xl text-wedding-gold"></i>
                             </div>
                             <div>
-                                <h3 class="font-cormorant text-xl font-semibold">1:00 am</h3>
+                                <h3 class="font-cormorant text-2xl font-semibold">1:00 am</h3>
                                 <p>Despedida</p>
                             </div>
                         </div>
@@ -438,7 +438,7 @@
                     <div class="bg-wedding-gold/10 inline-block rounded-full p-4 mb-4">
                         <i class="fab fa-amazon text-3xl text-wedding-gold"></i>
                     </div>
-                    <h3 class="font-cormorant text-xl font-semibold mb-4">Amazon Wishlist</h3>
+                    <h3 class="font-cormorant text-2xl font-semibold mb-4">Amazon Wishlist</h3>
                     <p class="mb-6">Hemos creado una lista con artículos que nos encantaría recibir para nuestro nuevo hogar.</p>
                     <a href="https://www.amazon.com.mx/wedding/share/sandovalsilva" class="inline-block bg-wedding-gold text-white py-2 px-6 rounded-full hover:bg-wedding-gold/80 transition-colors duration-300">Ver Mesa de Regalos</a>
                 </div>
@@ -448,7 +448,7 @@
                     <div class="bg-wedding-gold/10 inline-block rounded-full p-4 mb-4">
                         <i class="fas fa-gift text-3xl text-wedding-gold"></i>
                     </div>
-                    <h3 class="font-cormorant text-xl font-semibold mb-4">Lluvia de Sobres</h3>
+                    <h3 class="font-cormorant text-2xl font-semibold mb-4">Lluvia de Sobres</h3>
                     <p class="mb-6">Un detalle monetario para ayudarnos a iniciar nuestro matrimonio..</p>
                     <button class="inline-block bg-wedding-gold text-white py-2 px-6 rounded-full hover:bg-wedding-gold/80 transition-colors duration-300" id="showBankDetails">Ver Datos Bancarios</button>
                 </div>
@@ -458,7 +458,7 @@
                     <div class="bg-wedding-gold/10 inline-block rounded-full p-4 mb-4">
                         <i class="fas fa-store text-3xl text-wedding-gold"></i>
                     </div>
-                    <h3 class="font-cormorant text-xl font-semibold mb-4">Otro</h3>
+                    <h3 class="font-cormorant text-2xl font-semibold mb-4">Otro</h3>
                     <p class="mb-6">Si prefieren adquirirlo en otra tienda, son bienvenidos a hacerlo. Les agradeceríamos que nos lo hicieran saber para poder
                         eliminar el artículo de nuestra lista en Amazon.</p>
                     <!-- <a href="#" class="inline-block bg-wedding-gold text-white py-2 px-6 rounded-full hover:bg-wedding-gold/80 transition-colors duration-300">Ver Mesa de Regalos</a> -->
@@ -501,8 +501,9 @@
             <div class="max-w-md mx-auto">
                 <div class="bg-white border border-gray-200 rounded-lg shadow-lg p-8" data-aos="fade-up">
                     <div class="text-center mb-6">
-                        <p class="font-cormorant text-2xl">Formulario de confirmacion</p>
-                        <p class="text-wedding-black p-8">Por favor responde antes del 20/05/2025</p>
+                        <p class="font-cormorant font-bold text-2xl pt-4 pb-8">Formulario de confirmacion</p>
+                        <p class="text-wedding-black">Por favor responde antes del</p>
+                        <p class="text-wedding-black font-semibold">20 de mayo del 2025</p>
                     </div>
                     
                     <div class="space-y-4">
