--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Joshua & Paola - Nuestra Boda</title>
 
-    <link rel="icon" href="images/rings.png" type="image/png">
+    <link rel="icon" href="images/compromiso1.jpg" type="image/png">
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -70,7 +70,7 @@
                     <span class="text-xs md:text-sm uppercase tracking-wider">segundos</span>
                 </div>
             </div>
-            <p class="mt-6 font-cormorant text-xl animate__animated animate__fadeIn animate__delay-3s">25 de Julio de 2025</p>
+            <p class="mt-6 font-cormorant text-2xl animate__animated animate__fadeIn animate__delay-3s">25 de Julio de 2025</p>
         </div>
         <div class="absolute bottom-8 left-0 right-0 flex justify-center animate__animated animate__fadeInUp animate__delay-3s">
             <a href="#fotos" class="text-white hover:text-wedding-gold transition-colors duration-300">
